modules/ext.OpenSemanticLab/SkinOverwrites.css
/* ... */
.mw-widgets-datetime-dateTimeInputWidget-field {
    vertical-align: middle !important;
    padding: 0 !important;
}

/*Both select styles are used to give them the same size as the input fields in the forms.*/
#pfForm select {
    max-width: 100%;
    width: 227px !important;
}

/* generic classes to hide elements, used by PageForms_Extensions */
.generic-hide {
    display: none;
}

.generic-hide-force {
    display: none !important;
}

.select2-container--default {
    width: 227px !important;
}

/*smaller multi instance template forms*/
.multipleTemplateWrapper {
    width: 1100px;
}

/*PF simple upload form buttons misaligned*/
.oo-ui-selectFileInputWidget {
    width: auto !important;
    padding-bottom: 15px;
}

/* VE editor: gaps unter headings in edit mode
 interferes with CodeMirror, so only apply in visual edit mode */
.ve-ui-surface-visual .ve-ce-contentBranchNode {
    white-space: inherit !important;
}

/* fix vor VEForAll, see https://www.mediawiki.org/w/index.php?title=Topic:W1y9hyi4png1fpbo&topic_showPostId=w59ol98lmpj1gk17#flow-post-w59ol98lmpj1gk17 */
/*.mw-parser-output table {border-collapse: inherit;} */

/* hide section edit links, see https://www.mediawiki.org/wiki/Manual:Section_editing */
.mw-editsection {
    display: none;
}
/* more specific to overwrite Skin:Citizen css */
.citizen-body .mw-editsection { 
    display: none;
}

/* hide only  source edit links
.mw-editsection a:nth-of-type(2) { display:none!important; }
.mw-editsection>a[href*="section=T-"] { display:none!important; }
.mw-editsection>a[href*="veaction=editsource"] { display:none!important; }*/
/*.mw-editsection a:not(.mw-editsection-visualeditor) { display:none; }*/
/* also hide section edit links within header-tabs / pageforms */
.ht-editsection {
    display: none !important;
}

/* hide / display element in VE editor */
div.ve-visible.ve-ce-leafNode.ve-ce-mwTransclusionNode {
    display: block !important;
}

div.ve-hidden.ve-ce-leafNode.ve-ce-mwTransclusionNode {
    display: none !important;
}

/* prevent overlapping of editors */
.ve-visible {
    clear: both;
}
.ve-hidden {
    clear: both;
}

/* hide oo-ui button elements in visual editor*/
.ve-ce-leafNode .oo-ui-image-progressive {
    display: none !important;
}

/* gallery not displayed correctly in VisualEditor
this is due to  max-width:120px; in
/var/www/html/w/resources/src/mediawiki.page.gallery.styles/gallery.less
*/
ul.gallery.mw-gallery-slideshow.ve-ce-leafNode .gallerybox > div {
    max-width: unset;
}

/* hide "from <Wiki Site Name> */
#siteSub {
    display: none !important;
}

/* hide real title - better set in Extension:DisplayTitle? */
#contentSub .mw-displaytitle-subtitle
{
    display: none !important;
}

/* hide SimpleBatchUploader elements globally */
.fileupload-container label {
    display: none !important;
}

.fileupload-container textarea {
    display: none !important;
}

/* alterative / partially solution:
https://www.mediawiki.org/wiki/Topic:W3nu90pl5m3trwiz
https://github.com/wikimedia/parsoid/blob/master/src/Config/WikitextConstants.php#L86-L113
/var/lib/parsoid/lib/config/WikitextConstants.js
->  TagWhiteList: new Set([... 'A', 'BUTTON' , 'FORM', 'LABEL', 'TEXTAREA'])
*/

/* for DynamicFormLinks.js */
.dynamic-page-form-link {
    display: none;
}

/* Menus and buttons */
.citizen-ve-edit-merged#ca-edit-data>a {
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
}

.citizen-ve-edit-merged#ca-edit-data>a {
    background-color: var(--color-primary);
    color: #fff;
    border-radius: var(--border-radius--medium);
}

.page-actions ::before {
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
}

.citizen-ve-edit-merged#ca-edit-data->a::before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: "\f022";
    /* https://fontawesome.com/v5/icons/list-alt?f=classic&s=solid */
}

/* use svg logo */
.citizen-ve-edit-merged#ca-edit-data>a::before {
    content: "";
    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M464%2032H48C21.49%2032%200%2053.49%200%2080v352c0%2026.51%2021.49%2048%2048%2048h416c26.51%200%2048-21.49%2048-48V80c0-26.51-21.49-48-48-48zm-6%20400H54a6%206%200%200%201-6-6V86a6%206%200%200%201%206-6h404a6%206%200%200%201%206%206v340a6%206%200%200%201-6%206zm-42-92v24c0%206.627-5.373%2012-12%2012H204c-6.627%200-12-5.373-12-12v-24c0-6.627%205.373-12%2012-12h200c6.627%200%2012%205.373%2012%2012zm0-96v24c0%206.627-5.373%2012-12%2012H204c-6.627%200-12-5.373-12-12v-24c0-6.627%205.373-12%2012-12h200c6.627%200%2012%205.373%2012%2012zm0-96v24c0%206.627-5.373%2012-12%2012H204c-6.627%200-12-5.373-12-12v-24c0-6.627%205.373-12%2012-12h200c6.627%200%2012%205.373%2012%2012zm-252%2012c0%2019.882-16.118%2036-36%2036s-36-16.118-36-36%2016.118-36%2036-36%2036%2016.118%2036%2036zm0%2096c0%2019.882-16.118%2036-36%2036s-36-16.118-36-36%2016.118-36%2036-36%2036%2016.118%2036%2036zm0%2096c0%2019.882-16.118%2036-36%2036s-36-16.118-36-36%2016.118-36%2036-36%2036%2016.118%2036%2036z%22%2F%3E%3C%2Fsvg%3E");
    background-position: center;
    width: var(--size-icon);
    height: var(--size-icon);
    background-position: center;
    background-repeat: no-repeat;
    background-size: var(--size-icon);
    filter: invert(1);
}

#ca-copy>a::before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: "\f0c5";
    /* https://fontawesome.com/v5/icons/copy?f=classic&s=solid */
}

#ca-export-pdf>a::before {
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    content: "\f56e";
    /* https://fontawesome.com/v5/icons/file-export?f=classic&s=solid */
}

#ca-create-instance {
    order: 198
}
/* ... */

